--- a/es-ds-styles/scss/_variables.scss
+++ b/es-ds-styles/scss/_variables.scss
@@ -1078,7 +1078,7 @@ $btn-border-radius-lg:        $border-radius !default; // not currently used
 $btn-border-radius-sm:        $border-radius !default; // not currently used
 // fusv-enable
 
-$btn-transition:              color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out !default;
+$btn-transition:              color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out, outline .15s ease-in-out !default;
 
 
 // Forms
